main/firewall/iptables
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]

-A DOCKER -j ACCEPT
-A DOCKER-ISOLATION -j ACCEPT
-A FORWARD -i docker0 -j DOCKER-ISOLATION
-A FORWARD -i docker0 -o docker0 -j DOCKER


-A INPUT -i lo -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A INPUT -i docker0 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT


# sakura ssh server
-A INPUT -p tcp -s 153.126.191.67 -m tcp --dport 22 -j ACCEPT

-A INPUT -p tcp -m tcp --dport 2376 -j ACCEPT

#-A INPUT -p tcp -s 60.132.49.66 -m tcp --dport 22 -j ACCEPT
#-A INPUT -p tcp -s 60.132.49.66 -m tcp --dport 2376 -j ACCEPT

-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT


# all accept
#-A FORWARD  -i docker0 -o eth0 -j ACCEPT
#-A FORWARD  -o docker0 -i eth0 -j ACCEPT



-A FORWARD -p icmp -m icmp --icmp-type 0 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 0 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 3 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 3 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 11 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 11 -o docker0 -i eth0 -j ACCEPT






-A FORWARD -p tcp --sport 587 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --dport 587 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --sport 587 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p tcp --dport 587 -o docker0 -i eth0 -j ACCEPT


-A FORWARD -p tcp --sport 7223 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --dport 7223 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --sport 7223 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p tcp --dport 7223 -o docker0 -i eth0 -j ACCEPT

-A FORWARD -p udp --sport 7223 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --dport 7223 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --sport 7223 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p udp --dport 7223 -o docker0 -i eth0 -j ACCEPT


-A FORWARD -p tcp --sport 53 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --dport 53 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --sport 53 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p tcp --dport 53 -o docker0 -i eth0 -j ACCEPT

-A FORWARD -p udp --sport 53 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --dport 53 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --sport 53 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p udp --dport 53 -o docker0 -i eth0 -j ACCEPT

-A FORWARD -p tcp --sport 22 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --dport 22 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --sport 22 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p tcp --dport 22 -o docker0 -i eth0 -j ACCEPT

-A FORWARD -p udp --sport 22 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --dport 22 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --sport 22 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p udp --dport 22 -o docker0 -i eth0 -j ACCEPT



-A FORWARD -p tcp --sport 80 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --dport 80 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --sport 80 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p tcp --dport 80 -o docker0 -i eth0 -j ACCEPT

-A FORWARD -p udp --sport 80 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --dport 80 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --sport 80 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p udp --dport 80 -o docker0 -i eth0 -j ACCEPT

-A FORWARD -p tcp --sport 443 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --dport 443 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p tcp --sport 443 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p tcp --dport 443 -o docker0 -i eth0 -j ACCEPT

-A FORWARD -p udp --sport 443 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --dport 443 -i docker0 -o eth0 -j ACCEPT
-A FORWARD -p udp --sport 443 -o docker0 -i eth0 -j ACCEPT
-A FORWARD -p udp --dport 443 -o docker0 -i eth0 -j ACCEPT



#dos attack
# -A INPUT -m state --state RELATED,ESTABLISHED -m limit --limit 150/second --limit-burst 160 -j ACCEPT
# -A INPUT -p tcp --syn --dport 80 -m connlimit --connlimit-above 15 --connlimit-mask 32 -j REJECT --reject-with tcp-reset


#-A FORWARD -o docker0 -i eth0 -j ACCEPT
-A FORWARD -i docker0 -o eth0 -j ACCEPT

-A FORWARD -i docker0 -o eth1 -j ACCEPT
-A FORWARD -o docker0 -i eth1 -j ACCEPT


#-A FORWARD -j DOCKER-ISOLATION


#sudo iptable -t filter -A FORWARD -i docker0 -o eth1 -s coreos-1_private_ip -j ACCEPT



# Block Spoofing IP Addresses


COMMIT
